turtleart.lessons.turtleart.Main.CircleTen.scala.error
Source:3: error: ')' expected but integer literal found.
for (i<-10 to1000 by 10) {
                     ^Source:6: error: illegal start of simple expression
}
^