turtleart.lessons.turtleart.Main.CircleTen.scala.code
override def run() {
for (i<-10 to1000 by 10) {
	cercle(i)
}
}
